# local-ai-ctx

./: .gitignore  AGENTS.md  LICENSE  README.md  README_FIRST_zh.md  pyproject.toml
.ctx/: config.example.yml
.github/workflows/: ci.yml  release.yml
samples/ledger/: projects.yml  providers.yml
schemas/: projects.schema.json  providers.schema.json
scripts/: release_check.sh  ui_browser_smoke.py  ui_browser_smoke.sh  ui_smoke.sh
src/ctx/: __init__.py  __main__.py  cli.py  config.py  doctor.py  errors.py  git_check.py  i18n.py  models.py  render.py  rules.py  store.py  styles.py  ui.py
tests/: conftest.py  test_cli.py  test_config.py  test_doctor.py  test_git_check.py  test_models.py  test_rules.py  test_schemas.py  test_store.py  test_ui.py
